Update README.md with comprehensive configuration and commands documentation